# SOC-Analyst

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  __init__.py  _scenarios_exfil_brute.py  _scenarios_login.py  _scenarios_malware.py  _scenarios_phishing.py  app.py  constants.py  environment.py  graders.py  scenarios.py
tests/: test_environment.py  test_graders.py  test_scenarios.py
